// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QC Context Menus renders QcContextMenus 1`] = `
<div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
</div>
`;

exports[`QC Context Menus renders QcContextMenus 2`] = `
<body
  class=""
>
  <div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
</body>
`;
